# File and Version Information:
#  $Id: ChangeLog 8463 2014-06-24 01:53:04Z cpo@SLAC.STANFORD.EDU $
#
# Description:
#  ChangeLog file for package psmon
#------------------------------------------------------------------------

Package author: Dan Damiani

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-01-10
2015-05-24 Dan Damiani
- Bug fix for plotting directly from within one script

Tag: V00-01-09
2015-05-14 Dan Damiani
- Support for plotting directly from within one script (no
  separate client script needed).

Tag: V00-01-08
2015-05-11 Dan Damiani
- Add a console app (psconsole) for talking to psmon servers.
- Add legends for xyplot and 1d histograms.
- Cli options for forcing log scale added to psplot.
- Fill coloring is now configurable for 1d histograms.
- Several bug fixes related to value-display mouseover tooltips.

Tag: V00-01-07
2015-02-02 Dan Damiani
- Add user-definable axes for image plot

Tag: V00-01-06
2014-11-26 Christopher O'Grady and Dan Damiani
- Add auto-initialization

Tag: V00-01-05
2014-11-26 Christopher O'Grady
- Improvements from Dan: when hovering over an Image or XYPlot,
  get X,Y,(Z) coordinates displayed.  Also generalize information
  that user can send on the "communication" port to all python
  objects.

Tag: V00-01-04
2014-10-29 Christopher O'Grady
- Fix from Dan that prevents psplot from "falling behind" when
  ZMQ buffers on the client (display side) fill up.

Tag: V00-01-03
2014-10-22 Christopher O'Grady
- Support making plots without symbols (only lines).  Add histogram support.

Tag: V00-01-02
2014-09-29 Christopher O'Grady
- Add Anton Lindahl's simple multiplot example

Tag: V00-01-01
2014-09-29 Christopher O'Grady
- Add support for MultiPlots, Histograms and matplotlib-style
  strings to set symbol types in overlay plots.

Tag: V00-01-00
2014-07-23 Christopher O'Grady
- Many improvements to the interface and functionality.  This