@@ -11,6 +11,13 @@ Package author: Dan Damiani
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-01-11
+2015-07-31 Dan Damiani
+- Added a strip chart helper class
+- Helper classes moved into their own helper module
+- IPython embed feature used fo psconsole tool
+- Fixed several bugs with request listener in publish module
+
 Tag: V00-01-10
 2015-05-24 Dan Damiani
 - Bug fix for plotting directly from within one script
